Uploaded image for project: 'Qt'
  1. Qt
  2. QTBUG-26232

ListView crashes if entire contents are dragged below bounds

    XMLWordPrintable

Details

    Description

      With the example below if the item at the top of the list is grabbed and dragged sufficiently past the bottom of the window a crash will occur.

      import QtQuick 2.0
      
      ListView {
          width: 240; height: 320
      
          model: 20
          delegate: Rectangle {
              width: 240; height: 40
              color: "lightsteelblue"
          }
          section.property: "modelData"
          section.delegate: Rectangle {
              width: 240;
              height: 80
              color: "yellow"
          }
      }
      

      Attachments

        No reviews matched the request. Check your Options in the drop-down menu of this sections header.

        Activity

          People

            denexter Andrew den Exter (closed Nokia identity) (Inactive)
            denexter Andrew den Exter (closed Nokia identity) (Inactive)
            Votes:
            0 Vote for this issue
            Watchers:
            2 Start watching this issue

            Dates

              Created:
              Updated:
              Resolved:

              Gerrit Reviews

                There are no open Gerrit changes