src/quick/items/qquicklistview_p.h
@@ -158,6 +158,7 @@ protected:
     virtual void viewportMoved(Qt::Orientations orient);
     virtual void keyPressEvent(QKeyEvent *);
     virtual void geometryChanged(const QRectF &newGeometry,const QRectF &oldGeometry);
+    virtual void initItem(int index, QQuickItem *item);
 
 protected Q_SLOTS:
     void updateSections();
